@@ -35,7 +35,8 @@ classdef model_TFN_gui < model_gui_abstract
             % Get the available modle options
             %--------------------------------------------------------------
             % Get the types of weighting function and derived weighting function
-            if ~isdeployed
+            doFullBoot=false;
+            if ~isdeployed && doFullBoot
                 warning('off');
                 forcingFunctions = findClassDefsUsingAbstractName( 'forcingTransform_abstract', 'model_TFN');
                 derivedForcingFunctions = findClassDefsUsingAbstractName( 'derivedForcingTransform_abstract', 'model_TFN');
